--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
-    "multer": "^1.4.5-lts.1",
-    "mongodb": "^6.3.0"
+    "express": "^4.18.2",
+    "mongodb": "^6.3.0",
+    "multer": "^1.4.5-lts.1"
   }
-} 
+}
