--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "cloudinary": "^2.7.0",
-    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "multer": "^1.4.5-lts.1",
     "mongodb": "^6.3.0",
-    "multer": "^1.4.5-lts.1"
+    "cloudinary": "^1.41.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2"
   }
 }
